--- a/public/tree.html
+++ b/public/tree.html
@@ -5,19 +5,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="http-equiv" content="Content-type: text/html; charset=UTF-8">
 <meta name="description" content="A genogram is a family tree diagram for visualizing hereditary patterns." />
-<script src="./go.js"></script>
+<script src="tree/go.js"></script>
 <script src="./papaparse.min.js"></script>
-<script src="./genogram_setup.js"></script>
-<script src="./genogram_layout.js"></script>
-<script src="./prepare_names.js"></script>
-<script src="./main.js"></script>
+<script src="tree/genogram_setup.js"></script>
+<script src="tree/genogram_layout.js"></script>
+<script src="tree/prepare_names.js"></script>
+<script src="tree/main.js"></script>
 </head>
-<body onload="load_localstorage()">
+<body onload="load_url_file()">
 <input type="file" onchange="load_file()" id="uploadInput" />
 
 <button id="save" onclick="save_json()">Export JSON</button>
 <button onclick="save_svg()">Export SVG</button>
-<button onclick="load_url_file()">Load Default</button>
+<button onclick="load_url_file()">Загрузить дерево</button>
 <button onclick="clear_localstorage()">Clear LocalStorage</button>
 <hr/>
 <style>
